--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/kirk-clawson/arc-ng"
   },
   "dependencies": {
     "@angular/animations": "~7.2.0",
