--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "sample-app:build"
+            "browserTarget": "sample-app:build",
+            "sourceMap": {
+              "scripts": true,
+              "vendor": true
+            }
           },
           "configurations": {
             "production": {
